Bug #4278
read-only lofi devices can never be removed if used
Start date:
2013-10-30
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
% sudo lofiadm -r -a bar /dev/lofi/1 % sudo lofiadm -d bar % sudo lofiadm -r -a bar /dev/lofi/1 % sudo dd if=/dev/zero of=/dev/lofi/1 dd: opening `/dev/lofi/1': Read-only file system % sudo lofiadm -d bar lofiadm: could not unmap file /home/foo/bar: Device busy % sudo lofiadm -d /dev/lofi/1 lofiadm: could not unmap device /dev/lofi/1: Device busy
Updated by Alexander Eremin about 7 years ago
- Status changed from New to In Progress
- % Done changed from 0 to 50
Updated by Alexander Eremin about 7 years ago
- Status changed from In Progress to Pending RTI
- % Done changed from 50 to 100
Updated by Robert Mustacchi about 7 years ago
- Category set to kernel
- Status changed from Pending RTI to Resolved
Resolved in a67ac136365c88325c50c83d5b9b7891093cd1da.